# triadees

./: .env.cloud.example  .env.example  .env.free.example  .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  AUDIT_FIXES.md  AUDIT_REPORT.md  Base.docx  Dockerfile  Dockerfile.cloud  IngeniaInversa1  Inicio  Manifiesto  PLAN.md  PR9_AUDIT_REPORT.md  Procfile  README.md  RELEASE_LOCAL_1_0.md  ROADMAP.md  T001_SPEC.md  TECHNICAL_DEBT.md  compose.cloud.yml  compose.free.yml  diagnostic_failure.txt  estructura.txt  llms.txt  pyproject.toml  railway.json  render.yaml  requirements.txt  triade.yml  triade_digimon.py
apps/: __init__.py  api_app.py  chat_ui_app.py  chat_ui_router_app.py  federation_pairing_app.py  mobile_node_agent.py  model_router_api.py  public_relay_app.py  public_relay_entrypoint.py  services.py  single_port_app.py  ui_html.py
backups/: triade-before-systemd.db
benchmarks/: triade_level5_v1.json
deploy/: Caddyfile  Caddyfile.free
docs/: ALWAYS_ON_RUNTIME.md  ANDROID_NODE_VSCODE_BUILD_AND_TEST.md  API_CONTRACT_COMPATIBILITY.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_2026_06.md  BACKGROUND_WORKERS.md  BRANCH_CONSOLIDATION_AUDIT.md  CAPABILITY_EVIDENCE_ROADMAP.md  CI_GLOBAL_RECOVERY.md  CLOUD_24_7_EXECUTION_PLAN.md  CONVERSATION_EVOLUTION_REPORT.md  CORE_ARCHITECTURE_AUDIT.md  CORE_REFACTOR_BACKLOG.md  CORE_SCORECARD.md  DEPRECATED_UI_ROUTES.md  EXPLICIT_RUNTIME_POLICIES.md  FEDERATION.md  FEDERATION_FLOW.md  FREE_TIER_VPS_DEPLOYMENT.md  GITHUB_CI_TRIAD.md  GIT_SYNC_POLICY.md  INSTALL_N8N_PERSISTENTE.md  LEARNING.md  LEARNING_EVIDENCE_BRIDGE.md  LIVING_NEURONS.md  (+89 more)
(+562 files in other folders)
