[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triade-omega"
version = "2.2.0"
description = "Tríade Ω — Arquitectura triádica de inteligencia viva, relacional y verificable."
readme = "README.md"
license = {text = "Propietario"}
requires-python = ">=3.11"
authors = [
    {name = "Wataboo · Agencia Digital"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
triade = "triade_digimon:main"

[tool.setuptools.packages.find]
include = ["triade*", "apps*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
